Nav: Fixed nav overlap

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,6 +7,7 @@ $phone-sm: "(max-width : 479px)";
 $phone: "(max-width : 767px)";
 $tablet-sm: "(min-width : 480px)";
 $tablet: "(min-width : 768px)";
+$tablet-only: "(min-width : 768px) and (max-width : 992px)";
 $tablet-device: "(min-device-width : 768px)";
 $desktop: "(min-width : 991px)";
 
